# bsander

./: AUTHORS.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
bsander/: execution.py
bsander/bsandr_utils/: experiment_archive.py  input_types.py
bsander/pbic3g/: local_registry.py
bsander/pbic3g/containerization/: container_constructor.py  container_file.py
bsander/pbic3g/dependency_resolution/: whitelist.py
pbic3g/containerization/: container_constructor.py  container_file.py
tests/: test_execution.py
tests/examples/: Allen_ReaDDy_Actin.py
tests/pbic3g/containerization/: test_container_constructor.py
tests/pbic3g/dependency_resolution/: test_whitelist.py
